--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,34 @@
-fastapi==0.89.1
-uvicorn==0.20.0
-asyncpg==0.27.0
-fastapi==0.89.1
-ormar==0.12.1
-psycopg2-binary==2.9.5
-uvicorn==0.20.0
+aiofiles==0.8.0
+anyio==3.7.1
+asgiref==3.7.2
+bcrypt==4.1.2
+cffi==1.16.0
+click==8.1.7
+cryptography==41.0.7
+ecdsa==0.18.0
+exceptiongroup==1.2.0
+fastapi==0.92.0
+h11==0.14.0
+httptools==0.6.1
+idna==3.6
+jwtdown-fastapi==0.5.0
+passlib==1.7.4
+psycopg==3.1.2
+psycopg-binary==3.1.2
+psycopg-pool==3.2.1
+pyasn1==0.5.1
+pycparser==2.21
+pydantic==1.10.13
+python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.5
+PyYAML==6.0.1
+rsa==4.9
+six==1.16.0
+sniffio==1.3.0
+starlette==0.25.0
+typing_extensions==4.9.0
+uvicorn==0.17.6
+uvloop==0.19.0
+watchgod==0.8.2
+websockets==12.0
